# image-generator

./: README.md  chainlit.md  pyproject.toml
.chainlit/: config.toml
image_generator_bot/: config.py  log_factory.py  prompts.toml
image_generator_bot/backend/: download_img.py  image_generator.py  model.py  tagging_service.py  templates.py  toml_support.py
image_generator_bot/configuration/: templates.py
image_generator_bot/frontend/: main.py
